kubernetes_deployment/components/csa/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csa-api
  labels:
    app: csa-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csa-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: csa-api
    spec:
      tolerations:
      - key: "52north.org/directed-worker"
        value: "true"
        operator: "Equal"
        effect: "NoSchedule"
      - key: "52north.org/directed-worker"
        value: "true"
        operator: "Equal"
        effect: "NoExecute"
      containers:
      - name: csa-api
        image: 52north/directed-csa:latest
        imagePullPolicy: Always
        resources:
         requests:
           memory: 512M
           cpu: 10m
         limits:
           memory: 768M
           cpu: 250m
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: api-config
          mountPath: /app/connected-systems-api/default-config.yml
          subPath: default-config.yml
          readOnly: true
        - name: api-config
          mountPath: /app/hypercorn.conf.py
          subPath: hypercorn.conf.py
          readOnly: true
        - name: api-storage
          mountPath: /srv/data/
        - name: es-config
          mountPath: /app/connected-systems-api/certs/es-ca.crt
          subPath: ca.crt
          readOnly: true
      volumes:
      - name: api-config
        configMap:
          name: csa-api-config
      - name: api-storage
        persistentVolumeClaim:
          claimName: csa-api-storage
      - name: es-config
        configMap:
          name: csa-es-config
      restartPolicy: Always
      serviceAccountName: ""
