kubernetes_deployment/components/csa/es_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: csa-es
  labels:
    app: csa-es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csa-es
  serviceName: csa-es
  template:
    metadata:
      labels:
        app: csa-es
      annotations:
        # hints used by filebeat
        # Docu: https://www.elastic.co/guide/en/beats/filebeat/current/configuration-autodiscover-hints.html#_co_elastic_logsmodule
        co.elastic.logs/module: elasticsearch
    spec:
      tolerations:
      - key: "52north.org/directed-worker"
        value: "true"
        operator: "Equal"
        effect: "NoSchedule"
      - key: "52north.org/directed-worker"
        value: "true"
        operator: "Equal"
        effect: "NoExecute"
      containers:
      - name: csa-es
        image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
        imagePullPolicy: Always
        # Enable next two lines for debugging
        # command: ["/bin/sh"]
        # args: ["-c", "while true; do date; sleep 60;done"]
        resources:
          requests:
            memory: "768M"
            cpu: "10m"
          limits:
            memory: "1024M"
            cpu: "1000m"
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        - name: es-config
          mountPath: /usr/share/elasticsearch/config/certs/ca/ca.crt
          subPath: ca.crt
          readOnly: true
        - name: es-config
          mountPath: /usr/share/elasticsearch/config/certs/ca/ca.key
          subPath: ca.key
          readOnly: true
        - name: es-config
          mountPath: /usr/share/elasticsearch/config/certs/csa-es-0/csa-es-0.crt
          subPath: csa-es-0.crt
          readOnly: true
        - name: es-config
          mountPath: /usr/share/elasticsearch/config/certs/csa-es-0/csa-es-0.key
          subPath: csa-es-0.key
          readOnly: true
        - name: es-config
          mountPath: /etc/sysctl.d/52-vm-max-map-count.conf
          subPath: 52-vm-max-map-count.conf
          readOnly: true
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
      restartPolicy: Always
      volumes:
      - name: es-config
        configMap:
          name: csa-es-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 1Gi
      storageClassName: csi-nas
