kubernetes_deployment/components/csa/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csa-api
  labels:
    app: csa-api
spec:
  selector:
    app: csa-api
  ports:
  - name: "http"
    port: 5000
    targetPort: 5000
