kubernetes_deployment/components/csa/es_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csa-es
  name: csa-es
spec:
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  selector:
    app: csa-es
