kubernetes_deployment/components/csa/tsdb_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csa-tsdb
  name: csa-tsdb
spec:
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  selector:
    app: csa-tsdb
